# ikt590

./: .gitignore  README.md  comparison.md  comparison_2023-03-27.md  find_best.py  graph_logs.ipynb  pipeline.py  plots.md  pyproject.toml  test_word_encoding.ipynb
checkpoints/: fake-news-datasets-Election-Day_drop-p=0.75_max-literals=16_num-clauses=5000_max-vocab=15000_pre=v2_text_T=150_s=10.0.weights.pkl  fake-news-datasets-Election-Day_drop-p=0.75_max-literals=16_num-clauses=5000_max-vocab=15000_pre=v2_text_T=200_s=15.0.tokens.pkl  fake-news-datasets-Election-Day_drop-p=0.75_max-literals=16_num-clauses=5000_max-vocab=15000_pre=v2_text_T=200_s=15.0.weights.pkl  fake-news-datasets-Election-Day_drop-p=0.75_max-literals=32_num-clauses=5000_max-vocab=15000_pre=v2_text_T=150_s=10.0.weights.pkl  fake-news-datasets-Election-Day_drop-p=0.75_max-literals=32_num-clauses=5000_max-vocab=15000_pre=v2_text_T=200_s=15.0.weights.pkl  fake-news-datasets-Election-Day_drop-p=0.75_max-literals=3_num-clauses=5000_max-vocab=15000_pre=v2_text_T=150_s=10.0.weights.pkl  fake-news-datasets-Election-Day_drop-p=0.75_max-literals=3_num-clauses=5000_max-vocab=15000_pre=v2_text_T=200_s=15.0.weights.pkl  fake-news-datasets-Election-Day_drop-p=0.75_max-literals=8_num-clauses=5000_max-vocab=15000_pre=v2_text_T=150_s=10.0.weights.pkl  fake-news-datasets-Election-Day_drop-p=0.75_max-literals=8_num-clauses=5000_max-vocab=15000_pre=v2_text_T=200_s=15.0.weights.pkl  fake-news-datasets-deception-Celebrity_drop-p=0.75_max-literals=16_num-clauses=5000_max-vocab=15000_pre=v2_text_T=150_s=10.0.tokens.pkl  (+19 more)
